abhyram-backend/force-app/main/default/objects/Attendance_Log__c/Attendance_Log__c.object-meta.xml
<CustomObject>
    <description>Logs for employee login and logout times.</description>
    <label>Attendance Log</label>
    <nameField>
        <displayFormat>ATT-{000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>