abhyram-backend/force-app/main/default/objects/Attendance_Log__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user/employee associated with this log.</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendance_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>