abhyram-backend/force-app/main/default/objects/Attendance_Log__c/fields/Employee_Ref__c.field-meta.xml
<CustomField>
    <fullName>Employee_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee associated with this log (Custom Object Link).</description>
    <label>Employee Ref</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Attendance Logs</relationshipLabel>
    <relationshipName>Attendance_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>