abhyram-backend/force-app/main/default/objects/Attendance_Log__c/fields/Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Time__c</fullName>
    <description>Time when the employee clocked in.</description>
    <label>Login Time</label>
    <type>DateTime</type>
</CustomField>