abhyram-backend/force-app/main/default/objects/Attendance_Log__c/fields/Logout_Time__c.field-meta.xml
<CustomField>
    <fullName>Logout_Time__c</fullName>
    <description>Time when the employee clocked out.</description>
    <label>Logout Time</label>
    <type>DateTime</type>
</CustomField>