abhyram-backend/force-app/main/default/objects/Attendance_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the attendance session (e.g. Active, Completed).</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>